<resources>
    <string name="app_name">ZenithBackup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_to_zenith">Welcome to Zenith</string>
    <string name="your_fitness_companion">Your Fitness companion</string>
    <string name="get_started">Get started</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="textview">TextView</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="my_api_key">AIzaSyAfkay5Md47gS1ps1lMHcHyYGyV_gBtMX8</string>
    <string name="find_services_near_you_faster_and_smarter">Find services near you faster and smarter</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="login_to_your_account_to_continue">Login to your account to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geeks_for_geeks">Geeks for Geeks</string>
    <string name="already_have_an_account_sign_in">Already have an account, Sign In</string>
    <string name="techpro_konnnect">TECHPRO-Konnect!</string>
    <string name="back_button">back button</string>
    <string name="let_s_get_started">Let\'s Get started</string>
    <string name="forgot_password">forgot password</string>
    <string name="serve">Serve</string>
    <string name="search_for_services">Search for services</string>
    <string name="helps_with_easy_access_to_various_technician_services">Helps with easy access to various technician services</string>
    <string name="find_a_service_you_need">Find a service you need</string>
    <string name="around_you">Around you</string>
    <string name="personal_information">Personal Information</string>
    <string name="todo">TODO</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_work_location">Enter your Work location</string>
    <string name="clency_christine">Clency Christine</string>
    <string name="enter_your_home_location">Enter your home location</string>
    <string name="places_near_you">Places near you</string>
    <string name="set_your_weekly_goals_with_suggestions">Set your weekly goals with suggestions</string>
    <string name="hello_felix">Hello Felix!</string>
    <string name="find_more_suggestions">Find more suggestions</string>
    <string name="already_registered_sign_in">Already registered, sign in</string>
    <string name="welcome_to_zenith_your_fitness_companion">Welcome to Zenith, your fitness companion!</string>
</resources>